# ferriscompany

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/: tag_event.json
.github/workflows/: ci-staging.yaml  deploy-pullrequest.yaml
kubernetes/chart/: Chart.yaml  values.yaml
kubernetes/chart/charts/: index.yaml
kubernetes/chart/templates/: deployment.yaml
src/lib/: env.rs  infrastructure.rs
src/lib/application/: http.rs  ports.rs
src/lib/application/http/: handlers.rs
src/lib/application/http/handlers/: attach_professional.rs  create_company.rs  get_companies.rs  get_company.rs  health_check.rs
src/lib/application/ports/: messaging_subscriber_port.rs
src/lib/domain/company/: models.rs  ports.rs  services.rs
src/lib/domain/company/models/: company_validator.rs  message.rs
src/lib/infrastructure/: messaging.rs
src/lib/infrastructure/company/: neo4j.rs
src/lib/infrastructure/company/neo4j/: company_repository.rs
src/lib/infrastructure/messaging/: nats.rs
