bench = []
test = []
example = []

[[bin]]
path = "src/bin/server/main.rs"
name = "ferriscompany_server"
plugin = false
proc-macro = false
required-features = []

[package]
name = "ferriscompany"
edition = "2021"
version = "0.1.1"

[dependencies]
anyhow = "1.0.91"
async-nats = "0.37.0"
axum = "0.7.7"
dotenv = "0.15.0"
futures = "0.3.31"
neo4rs = "0.8.0"
serde_json = "1.0.132"
thiserror = "1.0.66"
tokio = "1.41.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.clap]
version = "4.5.20"
features = ["derive", "env"]

[dependencies.serde]
version = "1.0.214"
features = ["derive"]

[dependencies.tower-http]
version = "0.6.1"
features = ["trace"]

[dependencies.uuid]
version = "1.11.0"
features = ["serde", "v4"]

[lib]
path = "src/lib/lib.rs"
name = "ferriscompany"
required-features = []
